--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -41,13 +41,14 @@
             <img class="logo" src="{{template "staticPath" .}}/img/header-logo-1.png" alt="logo" />
         </a>
         <div class="footer-nav">
-            <a href="/about" class="category-link">ABOUT</a>
-            <a href="/about#rights" class="category-link">TERMS AND CONDITIONS</a>
-            <a href="https://www.figma.com/file/TJQIg2ezYVQnoeZpVtUtLX/Untitled?type=design&node-id=0%3A1&mode=design&t=FwvKUwbyOjXwMVPQ-1" class="category-link">SITEMAP</a>
+            <a href="/about" class="footer-nav-text">ABOUT</a>
+            <a href="/about#terms-and-conditions" class="footer-nav-text">TERMS AND CONDITIONS</a>
+            <a href="https://www.figma.com/file/TJQIg2ezYVQnoeZpVtUtLX/Untitled?type=design&node-id=0%3A1&mode=design&t=FwvKUwbyOjXwMVPQ-1" class="footer-nav-text">SITEMAP</a>
         </div>
         <p class="credits">
             MangaThorg.com is a Free website based on <a href="https://api.mangadex.org" class="credits-link">MangaDex API</a>.<br />No manga content is stored on our server, but all of it comes from <a href="https://mangadex.org" class="credits-link">MangaDex</a>.
         </p>
+        <a href="/about#contact" class="copyright-link">Contact</a>
         <div class="copyright">© MangaThorg.adebarbarin.com</div>
     </div>
     <div class="footer-img-reading" style="background-image: url('{{template "staticPath" .}}/img/footer-img-reading-girl-1.png')"></div>
