--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ body {
   align-items: center;
   gap: calc(8px + 0.5vw);
 }
-.footer .footer-nav-credits .footer-nav .header-nav-text {
+.footer .footer-nav-credits .footer-nav .footer-nav-text {
   width: fit-content;
   height: calc(15px + 0.4vw);
   font-family: "Tilt Neon", sans-serif;
@@ -342,6 +342,10 @@ body {
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
+  transition: color 100ms ease-in 50ms;
+}
+.footer .footer-nav-credits .footer-nav .footer-nav-text:hover {
+  color: #00ADB5;
 }
 .footer .footer-nav-credits .credits {
   width: 90%;
@@ -370,6 +374,19 @@ body {
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
+}
+.footer .footer-nav-credits .copyright-link {
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #00ADB5;
+  font-size: calc(11px + 0.4vw);
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+  transition: color 100ms ease-in 100ms;
+}
+.footer .footer-nav-credits .copyright-link:hover {
+  color: #EEEEEE;
 }
 .footer .footer-img-reading {
   height: 100%;
