--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -40,7 +40,9 @@
           <div class="category-card-hover"></div>
           <div class="hover-description">
             {{if $isConnected}}
-              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
+              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" >
+                <img src="static/img/{{if .IsFavorite}}darkred-remove-favorite.png{{else}}darkred-add-favorite.png{{end}}" alt="favorite-logo" />
+              </div>
             {{end}}
             <div class="description-title">Description</div>
             <div class="description-ctn">{{.Description}}</div>
@@ -73,7 +75,9 @@
           <div class="category-card-hover"></div>
           <div class="hover-description">
             {{if $isConnected}}
-              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" ></div>
+              <div class="favorite-btn {{if .IsFavorite}}delete-favorite{{else}}add-favorite{{end}}" id="{{.Id}}" >
+                <img src="static/img/{{if .IsFavorite}}darkred-remove-favorite.png{{else}}darkred-add-favorite.png{{end}}" alt="favorite-logo" />
+              </div>
             {{end}}
             <div class="description-title">
               Description
