--- a/assets/css/manga.css
+++ b/assets/css/manga.css
@@ -526,25 +526,18 @@ body {
   z-index: 5;
   margin: calc(3px + 0.3vw) calc(3px + 0.3vw) 0 0;
 }
-.manga-presentation .manga-banner .add-favorite::after {
-  content: "";
-  background-image: url("../../static/img/darkred-add-favorite.png");
+.manga-presentation .manga-banner .add-favorite,
+.manga-presentation .manga-banner .delete-favorite {
   width: calc(1.6rem + 2vw);
   height: calc(1.6rem + 2vw);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
   cursor: pointer;
 }
-.manga-presentation .manga-banner .delete-favorite::after {
-  content: "";
-  background-image: url("../../static/img/darkred-remove-favorite.png");
-  width: calc(1.6rem + 2vw);
-  height: calc(1.6rem + 2vw);
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
+.manga-presentation .manga-banner .add-favorite img,
+.manga-presentation .manga-banner .delete-favorite img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 .manga-presentation .manga-card-ctn-abs {
   position: absolute;
