--- a/assets/css/manga.scss
+++ b/assets/css/manga.scss
@@ -136,28 +136,17 @@
       z-index: 5;
       margin: calc(3px + .3vw) calc(3px + .3vw) 0 0;
     }
-    .add-favorite {
-      &::after{
-        content: '';
-        background-image: url("../../static/img/darkred-add-favorite.png");
-        width: calc(1.6rem + 2vw);
-        height: calc(1.6rem + 2vw);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        cursor: pointer;
-      }
-    }
+    .add-favorite,
     .delete-favorite {
-      &::after{
-        content: '';
-        background-image: url("../../static/img/darkred-remove-favorite.png");
-        width: calc(1.6rem + 2vw);
-        height: calc(1.6rem + 2vw);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        cursor: pointer;
+      width: calc(1.6rem + 2vw);
+      height: calc(1.6rem + 2vw);
+      cursor: pointer;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: center;
       }
     }
   }
