--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -391,41 +391,37 @@ a {
               left: 3px;
             }
             .set-banner {
-              background-image: url("http://localhost:8080/static/img/set-banner.png");
               width: calc(18px + .4vw);
               height: calc(18px + .4vw);
-              background-size: contain;
-              background-position: center;
-              background-repeat: no-repeat;
               cursor: pointer;
               z-index: 5;
-            }
 
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                object-position: center;
+              }
+            }
             .favorite-btn {
               position: absolute;
               top: 0;
               right: 3px;
+              z-index: 5;
             }
-            .add-favorite {
-                background-image: url("http://localhost:8080/static/img/darkred-add-favorite.png");
-                width: calc(18px + .4vw);
-                height: calc(18px + .4vw);
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-                cursor: pointer;
-                z-index: 5;
-              }
+            .add-favorite,
             .delete-favorite {
-                background-image: url("http://localhost:8080/static/img/darkred-remove-favorite.png");
-                width: calc(18px + .4vw);
-                height: calc(18px + .4vw);
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-                cursor: pointer;
-                z-index: 5;
+              width: calc(18px + .4vw);
+              height: calc(18px + .4vw);
+              cursor: pointer;
+
+              img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                object-position: center;
               }
+            }
             .description-title {
               text-align: center;
               font-size: clamp(16px, calc(15px + .4vw), 3rem);
